--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test page</title>
-    <script type="module" crossorigin src="/assets/index-B1rId5bl.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-7NPMlIH2.css">
+    <script type="module" crossorigin src="/assets/index-DGGcTHIC.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-BP_LBDWe.css">
   </head>
   <body>
     <div id="root"></div>
