--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test page</title>
-    <script type="module" crossorigin src="/assets/index-CV7l5a6p.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-kmrHnoDP.css">
+    <script type="module" crossorigin src="/assets/index-f2i2Sv5t.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-BA_bhxuN.css">
   </head>
   <body>
     <div id="root"></div>
