--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test page</title>
-    <script type="module" crossorigin src="/assets/index-z7vJMTNN.js"></script>
+    <script type="module" crossorigin src="/assets/index-Csi3x4NP.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-DXKGkeZ2.css">
   </head>
   <body>
