--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test page</title>
-    <script type="module" crossorigin src="/assets/index-B444gLDq.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-xE47KHM9.css">
+    <script type="module" crossorigin src="/assets/index-W9FCScFo.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-IYHL1_M6.css">
   </head>
   <body>
     <div id="root"></div>
