--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test page</title>
-    <script type="module" crossorigin src="/assets/index-W9FCScFo.js"></script>
+    <title>Default</title>
+    <script type="module" crossorigin src="/assets/index-0Ic00EVB.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-IYHL1_M6.css">
   </head>
   <body>
