--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Default</title>
-    <script type="module" crossorigin src="/assets/index-D7iXnS2Z.js"></script>
+    <script type="module" crossorigin src="/assets/index-CpGVxKDV.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-IYHL1_M6.css">
   </head>
   <body>
